tests/snapshots/examples_fixtures/flow__base_alias_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/flow/base_alias_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E012]: Unknown Module Member

Module `Flow` has no member named `len`.

  examples/flow/base_alias_error.flx:7:11
  |
7 |     print(Core.len([1, 2, 3]))
  |           ^^^^^^^^

Hint:
  Check the module's public members or import the correct module.
== stdout ==
<not executed>
